Add user group read all and create endpoints
